# openplc-runtime

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  install.sh  plugins.conf  plugins_default.conf  project.yml  start_openplc.sh
.github/workflows/: docker.yml  windows-installer.yml
core/include/: strucpp_abi.hpp
core/src/: CMakeLists.txt
core/src/drivers/: plugin_driver.c  plugin_driver.h  plugin_types.h
core/src/drivers/plugins/native/ethercat/: CMakeLists.txt  ethercat_config.c  ethercat_config.h  ethercat_config.json  ethercat_iface_state.c  ethercat_iface_state.h  ethercat_io.c  ethercat_io.h  ethercat_master.c  ethercat_master.h  ethercat_plugin.c  ethercat_plugin.h  ethercat_proc.c  ethercat_proc.h
core/src/drivers/plugins/native/examples/: test_plugin.c  test_plugin_loader.c
core/src/drivers/plugins/native/profibus_dp/: profibus_config.c  profibus_config.h  profibus_config.json  profibus_dp_messages.c  profibus_dp_messages.h  profibus_fdl.c  profibus_fdl.h  profibus_io.c  profibus_io.h  profibus_master.c  profibus_master.h  profibus_plugin.c  profibus_plugin.h  profibus_serial.c  profibus_serial.h
core/src/drivers/plugins/native/profinet_io/: profinet_config.c  profinet_config.h  profinet_config.json  profinet_dcp.c  profinet_dcp.h  profinet_eth.c  profinet_eth.h  profinet_io.c  profinet_io.h  profinet_master.c  profinet_master.h  profinet_plugin.c  profinet_plugin.h  profinet_rpc.c  profinet_rpc.h  profinet_rt.c  profinet_rt.h
core/src/drivers/plugins/native/s7comm/: CMakeLists.txt  s7comm_plugin.cpp
core/src/drivers/plugins/python/modbus_master/: modbus_master_plugin.py
core/src/drivers/plugins/python/modbus_slave/: simple_modbus.py
core/src/drivers/plugins/python/opcua/: address_space.py  opcua_config_template.json  opcua_memory.py  opcua_types.py  plugin.py  server.py  synchronization.py  user_manager.py
core/src/drivers/plugins/python/shared/: __init__.py  component_interfaces.py  mutex_manager.py  plugin_runtime_args.py  safe_buffer_access_refactored.py
core/src/drivers/plugins/python/shared/plugin_config_decode/: modbus_master_config_model.py  opcua_config_model.py
core/src/lib/: strucpp_abi.hpp
core/src/plc_app/: debug_handler.c  image_tables.cpp  image_tables.h  journal_buffer.c  journal_buffer.h  plc_io_cycle.cpp  plc_io_cycle.h  plc_main.c  plc_state_manager.c  plc_state_manager.cpp  plc_state_manager.h  plcapp_manager.h  scan_cycle_manager.c  scan_cycle_manager.h  unix_socket.c  unix_socket.h
core/src/plc_app/utils/: log.h  utils.c  utils.h
core/strucpp_runtime/: README.md  runtime_v4_entry.cpp
core/strucpp_runtime/include/: debug_dispatch.hpp  iec_array.hpp  iec_date.hpp  iec_dt.hpp  iec_located.hpp  iec_pointer.hpp  iec_ptr.hpp  iec_std_lib.hpp  iec_string.hpp  iec_struct.hpp  iec_subrange.hpp  iec_time.hpp  iec_tod.hpp  iec_traits.hpp  iec_types.hpp  iec_var.hpp  iec_wstring.hpp
docs/: DOCKER.md  ethercat-ebpfcat-plugin-development-plan.md  ethercat-plugin-development-plan.md
docs/plans/: ETHERCAT_NPCAP_FAILSAFE_REPORT.md  ONLINE_PROGRAMMING_PLAN.md  SYNC_OVERHAUL_IMPLEMENTATION.md
scripts/: Makefile.strucpp  compile.sh  run-image-dev.sh  run-image.sh  setup-virtual-serial.sh
tests/: test_debug_handler.c  test_ethercat_config_helpers.c  test_ethercat_config_parser.c  test_ethercat_config_validator.c  test_ethercat_data_types.c  test_ethercat_iec_location.c  test_ethercat_iface_validator.c  test_ethercat_proc.c  test_ethercat_sdo_config.c  test_plugin_driver.c  test_scan_cycle_tracker.c
tests/pytest/discovery/: __init__.py  conftest.py  test_ethercat_discovery.py  test_network_discovery.py
tests/pytest/modbus_master/: test_modbus_gateway.py
tests/support/: debug_handler_mocks.c  debug_handler_mocks.h  ethercat_stubs.c  plugin_driver_stubs.c
webserver/: app.py  debug_websocket.py  plcapp_management.py  plugin_config_model.py  restapi.py  runtimemanager.py  unixclient.py  version.py
webserver/discovery/: __init__.py  discovery_routes.py  ethercat_discovery.py  network_discovery.py
